Mammal trapping page info finished. Changes to nav bar.

--- a/css/modern-business.css
+++ b/css/modern-business.css
@@ -20,3 +20,11 @@ body {
 .portfolio-item {
   margin-bottom: 30px;
 }
+
+.nav-item {
+  font-family: Impact, Charcoal, sans-serif;
+}
+
+.nav-contact {
+  color: #FCF774 !important;
+}
