--- a/css/modern-business.css
+++ b/css/modern-business.css
@@ -26,7 +26,8 @@ body {
 }
 
 .portfolio-item {
-  margin-bottom: 30px;
+  /*margin-bottom: 30px;*/
+  margin-bottom: 0px;
 }
 /*
 .nav-item {
@@ -153,4 +154,45 @@ body {
 
 .flex-direction-nav li:last-child a::after {
   transform: translateY(-27px) rotate(45deg);
+}
+
+
+/* CSS for COVID-19 banner*/
+/* CSS used here will be applied after bootstrap.css */
+
+.aligner {
+  /*
+  padding-top: 8px;
+  padding-left: 10px;
+  display: flex;
+  vertical-align: middle;
+   */
+}
+.topbar{
+  /*
+  padding-right: 25px;
+   */
+}
+p {
+  font-family: "Open Sans", Arial, Helvetica, sans-serif;
+  color: #000;
+}
+.btn {
+  color: #000;
+  font-weight: bold;
+
+}
+
+
+
+
+
+.sampleContent {
+  padding: 4em 0 4em 0;
+}
+
+.banner {
+  background: rgba(200,200,200,0.8);
+  margin: 0;
+  padding: 1em;
 }
