--- a/css/modern-business.css
+++ b/css/modern-business.css
@@ -99,7 +99,9 @@ body {
   background-color: rgba(0, 0, 0, 0.1);
 }
 
-
+.btn-feedback:active {
+  background-color: red;
+}
 
 .flex-direction-nav li {
   position: absolute;
