--- a/css/modern-business.css
+++ b/css/modern-business.css
@@ -43,10 +43,13 @@ body {
   font-size: 30px;
   font-weight: bold;
 
+  /* PADDING TOO BIG FOR MOBILE. NEEDS TO CHANGE.*/
+  /*
   padding-top: 25px;
   padding-right: 15px;
   padding-bottom: 25px;
   padding-left: 25px;
+  */
 }
 /*
 .carousel-small {
@@ -212,6 +215,10 @@ h1.thick {
   font-weight:bold;
 }
 
+h2.thick {
+  font-weight:bold;
+}
+
 h3.thick {
   font-weight:bold;
 }
@@ -242,4 +249,11 @@ h3.thick {
   background: rgba(200,200,200,0.8);
   margin: 0;
   padding: 1em;
+}
+
+.avatar {
+  vertical-align: middle;
+  width: 50px;
+  height: 50px;
+  border-radius: 50%;
 }
