Added icons to pest control page. Added images to rest of pest index

--- a/css/modern-business.css
+++ b/css/modern-business.css
@@ -331,7 +331,11 @@ h3.thick {
 .rounded-circle-custom {
   vertical-align: middle;
   horiz-align: center;
-  width: 150px;
-  height: 150px;
+  width: 77px;
+  height: 77px;
   border-radius: 50%;
+}
+
+.img-fluid-custom {
+
 }
