--- a/css/modern-business.css
+++ b/css/modern-business.css
@@ -44,7 +44,6 @@ h3 {
   font-family: Arial Black;
   background-color: #1D5171;
   color: #DFCE9D;
-  opacity:0.6;
 }
 
 h4 {
@@ -57,8 +56,8 @@ h5 {
   color: #DFCE9D;
 }
 
-.btn-info {
-
+h6 {
+  color: white;
 }
 
 .testimonial-card {
@@ -110,11 +109,6 @@ a:active {
   color: #e7ddcb;
 }
 
-/*
-.nav-item {
-  font-family: Impact, Charcoal, sans-serif;
-}
-*/
 .nav-contact {
   color: #C2B280 !important;
   background-color: #1D5171;
@@ -140,6 +134,12 @@ a:active {
 
 .card-header {
   background-color: #C2B280;
+  font-family: Arial Black;
+}
+
+.card-credits-header {
+  color: black;
+  background-color: white;
   font-family: Arial Black;
 }
 
